[gd_scene load_steps=7 format=3 uid="uid://dgdm61yvdb1s2"]

[ext_resource type="Script" uid="uid://chrs04u1qokbv" path="res://scripts/BaseSlide.gd" id="1_1"]
[ext_resource type="SpriteFrames" uid="uid://cyhdvvolomeci" path="res://assets/Animations/Sprite_animations.tres" id="2_vqs8c"]
[ext_resource type="Script" path="res://scripts/slides/Slide08.gd" id="3_slide08"]
[ext_resource type="AudioStream" path="res://assets/sounds/slide 08/jump.wav" id="4_jump"]
[ext_resource type="AudioStream" path="res://assets/sounds/slide 08/damage.wav" id="5_damage"]
[ext_resource type="AudioStream" path="res://assets/sounds/slide 08/coin.wav" id="6_coin"]

[node name="Slide08_Assets" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "Assets: A Arte do Jogo"
horizontal_alignment = 1

[node name="Types" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 25
columns = 2

[node name="Sprites" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Types"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Icon" type="ColorRect" parent="MarginContainer/VBoxContainer/Types/Sprites"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
color = Color(0.8, 0.4, 0.4, 0.3)

[node name="sprite01" type="AnimatedSprite2D" parent="MarginContainer/VBoxContainer/Types/Sprites/Icon"]
texture_filter = 3
position = Vector2(97, 62)
scale = Vector2(6, 6)
sprite_frames = ExtResource("2_vqs8c")
animation = &"run_01"
autoplay = "run_01"
frame_progress = 0.24358414

[node name="sprite02" type="AnimatedSprite2D" parent="MarginContainer/VBoxContainer/Types/Sprites/Icon"]
texture_filter = 3
position = Vector2(422, 62)
scale = Vector2(5, 5)
sprite_frames = ExtResource("2_vqs8c")
animation = &"idle_03"
autoplay = "idle_03"
frame_progress = 0.052536737

[node name="sprite03" type="AnimatedSprite2D" parent="MarginContainer/VBoxContainer/Types/Sprites/Icon"]
texture_filter = 3
position = Vector2(795, 88)
scale = Vector2(6, 6)
sprite_frames = ExtResource("2_vqs8c")
animation = &"idle_01"
autoplay = "idle_01"
frame_progress = 0.99298394

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/Types/Sprites"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 28
text = "Sprites"
horizontal_alignment = 1

[node name="Desc" type="Label" parent="MarginContainer/VBoxContainer/Types/Sprites"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Imagens (.png)"
horizontal_alignment = 1

[node name="Audio" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Types"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Icon" type="ColorRect" parent="MarginContainer/VBoxContainer/Types/Audio"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
color = Color(0.4, 0.8, 0.4, 0.3)

[node name="ButtonsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Types/Audio/Icon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -25.0
offset_right = 200.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="BtnJump" type="Button" parent="MarginContainer/VBoxContainer/Types/Audio/Icon/ButtonsContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "üîä Pulo"

[node name="BtnHit" type="Button" parent="MarginContainer/VBoxContainer/Types/Audio/Icon/ButtonsContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "üí• Dano"

[node name="BtnCoin" type="Button" parent="MarginContainer/VBoxContainer/Types/Audio/Icon/ButtonsContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "ü™ô Moeda"

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/Types/Audio"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 28
text = "√Åudio"
horizontal_alignment = 1

[node name="Desc" type="Label" parent="MarginContainer/VBoxContainer/Types/Audio"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Sons (.wav, .ogg)"
horizontal_alignment = 1

[node name="Fonts" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Types"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Icon" type="ColorRect" parent="MarginContainer/VBoxContainer/Types/Fonts"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
color = Color(0.4, 0.4, 0.8, 0.3)

[node name="FontsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Types/Fonts/Icon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Font1" type="Label" parent="MarginContainer/VBoxContainer/Types/Fonts/Icon/FontsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Fonte Normal"
horizontal_alignment = 1

[node name="Font2" type="Label" parent="MarginContainer/VBoxContainer/Types/Fonts/Icon/FontsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "Fonte Destaque"
horizontal_alignment = 1

[node name="Font3" type="Label" parent="MarginContainer/VBoxContainer/Types/Fonts/Icon/FontsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Fonte Pequena"
horizontal_alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/Types/Fonts"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.4, 0.8, 1)
theme_override_font_sizes/font_size = 28
text = "Fontes"
horizontal_alignment = 1

[node name="Desc" type="Label" parent="MarginContainer/VBoxContainer/Types/Fonts"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Tipografia (.ttf)"
horizontal_alignment = 1

[node name="Others" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Types"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Icon" type="ColorRect" parent="MarginContainer/VBoxContainer/Types/Others"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
color = Color(0.8, 0.8, 0.4, 0.3)

[node name="ShaderDemo" type="ColorRect" parent="MarginContainer/VBoxContainer/Types/Others/Icon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -40.0
offset_right = 80.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3, 0.5, 0.8, 1)

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Types/Others/Icon/ShaderDemo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -13.0
offset_right = 70.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "‚ú® Shaders"
horizontal_alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/Types/Others"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 28
text = "Outros"
horizontal_alignment = 1

[node name="Desc" type="Label" parent="MarginContainer/VBoxContainer/Types/Others"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Shaders, dados..."
horizontal_alignment = 1

[node name="Footer" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.6, 1)
theme_override_font_sizes/font_size = 26
text = "Arraste arquivos ‚Üí Godot importa automaticamente!"
horizontal_alignment = 1

[node name="AudioJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jump")

[node name="AudioHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_damage")

[node name="AudioCoin" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_coin")

[node name="InteractiveScript" type="Node" parent="."]
script = ExtResource("3_slide08")
